# game_engine_2

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_shaders.bat  vcpkg-x64-mingw-static.txt  vcpkg-x64-windows.txt
.github/workflows/: windows.yml
cmake/: build_misc.cmake  imgui.cmake  packages.cmake  use-compiler-gcc.cmake  use-compiler-msvc.cmake
common/src/core/: common.cpp  common.hpp  pch.hpp  singleton.hpp  vec.cpp
common/src/core/maths/: helpers.hpp  mat.cpp  mat.hpp  vec.cpp  vec.hpp
engine/: CMakeLists.txt
engine/src/: box2d_parallel.cpp  box2d_parallel.hpp  main.cpp  sdl_exception.hpp  sdl_hot_reload_dll.cpp  sdl_hot_reload_dll.hpp  sdl_shader.cpp  sdl_surface.cpp  sdl_surface.hpp  threadsafe_queue.hpp
game/: CMakeLists.txt
game/assets/config/: spritemap_animation_idle.json  spritemap_custom.json  spritemap_junkers.json  spritemap_kennynl.json  spritemap_kennynl_icons.json  spritemap_ship_small_rusty.json
game/assets/raws/: items.jsonc  upgrades.jsonc
game/assets/raws/hulls/: Hulls_Constitution.jsonc  Hulls_Dinghy.jsonc  Hulls_PBR.jsonc  Hulls_RHIB.jsonc  Hulls_Trimaran.jsonc
game/assets/scripts/: rebuild_dll.bat
game/assets/shaders/: 2d_crt_effect.frag  2d_debris.frag  2d_emitters_and_occluders.frag  2d_instanced.frag  2d_instanced.vert  2d_jump_flood.frag  2d_lighting.frag  2d_linear_to_srgb.frag  2d_mix_lighting_and_scene.frag  2d_outline.frag  2d_voronoi_distance.frag  2d_voronoi_seed.frag  2d_worley_noise_water.frag  compile.sh  star_nest.frag
game/assets/shaders/source/: SolidColorInput.frag.hlsl  compile.bat
game/assets/textures/: custom.aseprite  junkers.aseprite  resource.rc
game/assets/writing/: quips_hit.txt
game/src/: game.cpp  game.hpp  main.cpp  render_helpers.cpp  render_helpers.hpp  sdl_exception.hpp  sdl_shader.cpp  sdl_shader.hpp  sdl_surface.cpp
game/src/actors/actor_player/: actor_player_components.hpp
game/src/common/: common.cpp  common.hpp  singleton.hpp
game/src/core/box2d/: box2d_components.hpp  box2d_helpers.cpp  box2d_helpers.hpp
game/src/core/camera/: camera_helpers.cpp  camera_helpers.hpp
game/src/core/engine/: components.hpp
game/src/core/entt/: entt_helpers.hpp
game/src/dll_boundary/: CMakeLists.txt  common.hpp  game.cpp  game.hpp  render_helpers.cpp  render_helpers.hpp
game/src/engine/: CMakeLists.txt  box2d_parallel.cpp  box2d_parallel.hpp  main.cpp  sdl_hot_reload_dll.cpp  sdl_hot_reload_dll.hpp  sdl_shader.cpp  sdl_shader.hpp  sdl_surface.cpp  threadsafe_queue.hpp
game/src/engine/systems/: render_helpers.cpp  render_helpers.hpp
game/src/systems/system_events/: events_components.hpp
game/src/systems/system_items/: items_components.hpp
game/src/systems/ui_system_gameover/: ui_gameover_components.hpp  ui_gameover_system.cpp  ui_gameover_system.hpp
game_tests/: CMakeLists.txt  vcpkg.json
